# categorical

./: .gitignore  CMakeLists.txt  README.md  build_install.sh
api/matlab/: Categorical.m  README.md  cat_api.m  cat_api.mexa64  cat_api.mexmaca64  cat_api.mexmaci64  cat_api.mexw64  cat_build.m  cat_buildall.m  cat_buildconfig.m  cat_versioninfo.m  fcat.m  labeled.m  plotlabeled.m
api/matlab/benchmark/: cat_benchmark_config.m  cat_benchmark_find.m  cat_benchmark_findall.m  cat_benchmark_findall_indexed.m  cat_benchmark_findall_methods.m  cat_benchmark_generate.m  cat_benchmark_generate_examples.m  cat_benchmark_generate_find.m  cat_benchmark_generate_findall.m  cat_benchmark_generate_findall_indexed.m  cat_benchmark_generate_randomized.m  cat_benchmark_load.m  cat_benchmark_plot.m  cat_benchmark_run.m  cat_benchmark_save.m
api/matlab/data/: bigfcat.mat  bigfcat2.mat  categorical.mat  smalldata.mat
api/matlab/example/: cat_example_plot.m  cat_example_plot1.m  cat_example_plot2.m  cat_example_plotting.m  cat_example_rowops.m  cat_example_table.m  cat_getexample.m  cat_random.m  example_append.m  example_gettingstarted.m  example_gettingstarted2.m  example_gettingstarted_labeled.m  example_plot.m  (+1 more)
include/: categorical.hpp
lib/: categorical.lib
lib/win/: categorical.lib
src/: allocators.hpp  bit_array.cpp  bit_array.hpp  categorical.cpp  categorical.hpp  config.hpp  dynamic_array.hpp  hashing.cpp  hashing.hpp  helpers.hpp  multimap.hpp  platform.hpp  set_membership.cpp  set_membership.hpp  types.hpp  utilities.hpp
test/: bit_array.cpp  categorical.cpp
(+372 files in other folders)
